[build-system]
requires = ["setuptools>=69.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "rlgym-sac"
version = "1.3.13"
description = "A multi-processed implementation of SAC for use with RLGym."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
    { name = "Jacob McSwain", email = "jacob@mcswain.dev" }
]
keywords = ["rocket-league", "gymnasium", "reinforcement-learning", "simulation", "sac", "rlgym", "rocketsim"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
urls = { repository = "https://github.com/USA-RedDragon/rlgym-sac" }
dependencies = [
    "gymnasium>=1.2.3",
    "numpy>=1.26.4",
    "rlviser-py>=0.6.13",
    "rocketsim>=2.1.1.post4",
    "torch>=2.9.1",
    "wandb>=0.23.1",
]

[tool.setuptools.packages.find]
where = ["src"]
